jira_clone/force-app/main/default/objects/TicketComment__c/TicketComment__c.object-meta.xml
<CustomObject>
    <description>Comments posted on a ticket by project members</description>
    <label>Ticket Comment</label>
    <nameField>
        <label>Ticket Comment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>