jira_clone/force-app/main/default/objects/TicketComment__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The project member who posted this comment</description>
    <label>Creator</label>
    <referenceTo>ProjectMember__c</referenceTo>
    <relationshipLabel>Ticket Comments</relationshipLabel>
    <relationshipName>TicketComments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>