jira_clone/force-app/main/default/objects/TicketComment__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The ticket this comment belongs to</description>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Ticket Comments</relationshipLabel>
    <relationshipName>TicketComments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>